feat(analytics): initial analytics service layed out
